# simple_notes_FastAPI

./: .gitignore  README.md  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 6756887ed6bc_initial_migration.py
app/: crud.py  models.py  schemas.py
