[project]
name = "simple-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "FrostWillmott", email = "i.tkachenko@zohomail.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic>=1.17.1,<2.0.0",
    "aiosqlite>=0.21.0",
]

[tool.poetry]
package-mode = false
